Added User_Role Department Section Buttons